--- a/README.rdoc
+++ b/README.rdoc
@@ -1,8 +1,8 @@
-== Liquid CMS
+= Liquid CMS
 
 A context aware CMS Ruby on Rails engine that uses liquid templates.
 
-== Installation
+= Installation
 
 Add the gem to your Gemfile:
 
@@ -20,17 +20,17 @@ The generator adds an additional dependency to your application, so bundler shou
 
   bundle install
 
-== Configuration
+= Configuration
 
 Configure the engine in config/initializers/cms/liquid_cms.rb:
 
   If you wish to run the cms under multiple "contexts" (ie. a cms each for a company, business, customer, etc.) then you need to perform the following steps:
   
-    Set the *context_class* attribute to your apps context class:
+    * Set the *context_class* attribute to your apps context class:
 
       config.context_class = :Company
 
-    And then set the context object in the Cms::SetupController or any controller up the inheritance chain.
+    * And then set the context object in the Cms::SetupController or any controller up the inheritance chain.
 
       Cms.set_context @company, self
 
@@ -42,16 +42,16 @@ Run the migration:
 
 If you later decide to use the engine under a context, you'll have to re-run the migration.
 
-== Usage
+= Usage
 
-Once the engine is configured, you can view the CMS at the */cms* path in your browser.
+Once the engine is configured, you can view the CMS at the <b>/cms</b> path in your browser.
 
-== Customization
+= Customization
 
-In order to expose data in your application in the templates, liquid filters, drops, tags and blocks specific to your application can be added to the app/liquid folder.  Knowledge of liquid templates and the liquid library is required to do this.  Examples of custom filters, drops, tags and blocks can be seen in the gem files itself or in additional documentation on this website or related forums.
+In order to expose data in your application in the templates, liquid filters, drops, tags and blocks specific to your application can be added to the <b>app/liquid</b> folder.  Knowledge of liquid templates and the liquid library is required to do this.  Examples of custom filters, drops, tags and blocks can be found in the liquid_cms gem files or in additional documentation on this website or related forums.
 
 A set of filters, drops and tags are provided in addition to the defaults provided by liquid.  The documentation link accessible in the CMS provides additional details.
 
-== Contribution
+= Contribution
 
-If you experience any issues with this CMS engine, please open a bug report.  Contributionis to improve this engine is extremely welcome.  A 1.0 release will be made when the engine has a bit more *polish* on it.
+If you experience any issues with this CMS engine, please open a bug report.  Contributionis to improve this engine is extremely welcome.  A 1.0 release will be made when the engine has a bit more _polish_ on it.
