--- a/TODO.rdoc
+++ b/TODO.rdoc
@@ -4,4 +4,5 @@
 * Implement caching and expiration logic.
 * Provide example apache/nginx/etc. conf files that properly scope cms assets for each context.
 * Generate CMS documentation from rdoc comments in source files.
+* Search functions.  Find templates based on search text.
 * Missing tests... add more coverage.
