- updated asset unit tests - test clean up - minor code updates

--- a/config/locales/cms/en.yml
+++ b/config/locales/cms/en.yml
@@ -38,6 +38,7 @@ en:
     "yes": 'Yes'
     "no": 'No'
     buttons:
+      cancel: 'Cancel'
       create: 'Create %{model}'
       update: 'Update %{model}'
       submit: 'Submit %{model}'
