--- a/CHANGELOG.rdoc
+++ b/CHANGELOG.rdoc
@@ -1,3 +1,12 @@
+== Master
+
+* Enhancements
+  * Allow text based assets to be editable inline.
+
+* Bug Fixes
+  * Fix errors with editing and listing uploaded components.
+  * Fix translation issues making hint text html_safe.
+
 == 0.3.0.2
 
 Updated codemirror to 0.9
