enhance resource UI with tabs to reduce scrolling and easier navigation

--- a/config/locales/cms/en.yml
+++ b/config/locales/cms/en.yml
@@ -2,7 +2,7 @@ en:
   pages:
     actions:
       index:
-        title: 'Site Pages'
+        title: 'Pages'
         none: 'There are currently no pages.'
         new_link: 'Create a new page'
       new:
@@ -17,7 +17,7 @@ en:
   assets:
     actions:
       index:
-        title: 'Site Assets'
+        title: 'Assets'
         none: 'There are currently no assets.'
         new_link: 'Upload a new asset'
       new:
