--- a/CHANGELOG.rdoc
+++ b/CHANGELOG.rdoc
@@ -3,6 +3,7 @@
 * Enhancements
   * Upgrade codemirror syntax highlighting to 0.94
   * Remember component folders view state.
+  * Add tabs for each resource type.
 
 == 0.2.0.11
 
