refactor component code and show message if no components have been uploaded

--- a/config/locales/cms/en.yml
+++ b/config/locales/cms/en.yml
@@ -33,6 +33,7 @@ en:
     actions:
       index:
         title: 'Components'
+        none: 'There are currently no components.'
 
   simple_form:
     "yes": 'Yes'
