--- a/CHANGELOG.rdoc
+++ b/CHANGELOG.rdoc
@@ -1,4 +1,9 @@
-== 0.2.0.11
+== Master
+
+* Enhancements
+  * Integrate basic page search capabilities.
+
+== 0.2.0.12
 
 * Enhancements
   * Upgrade codemirror syntax highlighting to 0.94
