--- a/CHANGELOG.rdoc
+++ b/CHANGELOG.rdoc
@@ -5,6 +5,7 @@
   * Assets can now be searched for using the liquid 'asset_data' tag.  {% asset_data tag:'test' %}
     See the built-in docs for more details on how to use "asset_data" and asset drops.
   * Asset drops (accessible via the asset_data tag) give you access to the meta data and custom image information.
+  * limit and random ordering for collection retrieved from the asset_data tag.
 
 == 0.2.0.13
 
