updated tests for ajax updating

--- a/test/rails_app/config/locales/cms/en.yml
+++ b/test/rails_app/config/locales/cms/en.yml
@@ -1,14 +1,19 @@
 en:
   pages:
+    layout:
+      title: 'Liquid CMS'
     actions:
       index:
-        title: 'Site Pages'
+        title: 'Pages'
         none: 'There are currently no pages.'
-        new_link: 'Create a new page'
+        new: 'Create a new page'
+        search: 'Search'
       new:
         title: 'New Page'
       edit:
         title: 'Editing Page'
+      search:
+        title: 'Page Search'
     flash:
       created: 'The page has been saved.'
       updated: 'The page has been updated.'
@@ -17,9 +22,9 @@ en:
   assets:
     actions:
       index:
-        title: 'Site Assets'
+        title: 'Assets'
         none: 'There are currently no assets.'
-        new_link: 'Upload a new asset'
+        new: 'Upload a new asset'
       new:
         title: 'New Asset'
       edit:
@@ -33,6 +38,9 @@ en:
     actions:
       index:
         title: 'Components'
+        none: 'There are currently no components.'
+    flash:
+      updated: 'The component file has been updated.'
 
   simple_form:
     "yes": 'Yes'
@@ -54,9 +62,23 @@ en:
         root: 'Home Page'
       cms_asset:
         asset_file_name: 'File'
+        tag_list: 'Tags'
     hints:
       cms_page:
         name: 'The name must contain no whitespace or any other special characters. Letters, numbers, hyphens, underscores and periods are valid.<br/>The extensions <em>.css</em>, <em>.js</em>, <em>.xml</em>, <em>.json</em> and <em>.txt</em> can used to auto-identify the content-type.  If no extension is provided, html is the default type.'
         content: 'To create a layout page, add the <em>{{ content_for_layout }}</em> tag which will act as a placeholder for the contents of another page.  Use ctrl+s to save.'
         slug: 'The url path that will be used to access this page.  Defaults to the page name if not provided. ie. /name.<br/> Ex. /home_page'
         layout_page_id: 'Optional page that will be used as this pages layout.  Ie. This pages content will be inserted into the layout page where the <em>{{ content_for_layout }}</em> tag is specified.'
+        published: 'Make this page accessible via the pages name or url path?'
+        root: 'Make this page the sites root path (/)? Only one page can have this designation.'
+      cms_component:
+        file_content: '<em>No liquid support for editing components.</em> Use ctrl+s to save.'
+      cms_asset:
+        asset: 'Upload an asset file.'
+        tag_list: 'Seperate tags with commas.'
+        dimensions: 'Specify custom dimensions in pixels as width x height.  The aspect ratio will be maintained, so actual dimensions may differ.  Applies to image assets only.'
+        meta:
+          name: 'The name must begin with a letter and consist only of lowercase letters, numbers and underscores.'
+        file_content: '<em>No liquid support for editing assets.</em> Use ctrl+s to save.'
+        edit:
+          asset: 'An existing file has been uploaded.  Upload a new file to replace it.'
