--- a/CHANGELOG.rdoc
+++ b/CHANGELOG.rdoc
@@ -1,7 +1,9 @@
-== master
+== 0.2.2.0
 
 * Enhancements
   * Optimize paperclip image dimension lookup in to_liquid calls.  To make use of optimized paperclip attachments in your custom to_liquid methods, add a column to your table in a migration. See the README under the customization section for more information.
+  * Update to codemirror v2
+  * Ctrl+s now uses ajax for editing pages, textual assets and textual components in order to streamline the editing process.
 
 * Fixes
   * Move data_tag.rb file into cms dir due to possible rails class loading issues.
